foolish/foolish-core/src/snapshots/foolish_core__approval_tests__searchLocalizedVsGlobalizedIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 kaiKZ33Zw7WSrAFiq5TMk+K+s2OR8XDTFgFTy7Yx9aIYYaO5dUZnc5g9sGJZbdDjKytryGssHkeM1w/MZ3r2Cw==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  r1 = 
  Search(pattern='y', dir=BACKWARD, ANCHORED) [EMBRYONIC]
  r2 = 
  Search(pattern='(al.*)', dir=BACKWARD, ANCHORED) [EMBRYONIC]
  r3 = 
  Search(pattern='notfound', dir=BACKWARD, ANCHORED) [EMBRYONIC]
  r4 = 
  Search(pattern='^a.*', dir=BACKWARD, ANCHORED) [EMBRYONIC]
  r5 = 
  Search(pattern='e$', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [NK]
  r1 = 
  Int(20) [INDEPENDENT]
  r2 = 
  Int(1) [INDEPENDENT]
  r3 = 
  Search(pattern='notfound', dir=BACKWARD, ANCHORED) [NK]
  r4 = 
  Int(1) [INDEPENDENT]
  r5 = 
  Int(1) [INDEPENDENT]
