foolish/foolish-core/src/snapshots/foolish_core__approval_tests__searchRegexPatternsIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 tbUDMukv0zuEvL+Ip0CA87aZ1dW3S2YVCJ3yyyDZE9xN2XnNN2sipp0UZH8C7xtMX+7/YvuDVeDu/gBMgh+1Bw==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  aliceˍmatch = 
  Search(pattern='(al.*)', dir=BACKWARD, ANCHORED) [EMBRYONIC]
  firstˍa = 
  Search(pattern='^a', dir=BACKWARD, ANCHORED) [EMBRYONIC]
  endsˍwithˍe = 
  Search(pattern='e$', dir=BACKWARD, ANCHORED) [EMBRYONIC]
  tempˍvars = 
  Search(pattern='(tmpˍ.*)', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  aliceˍmatch = 
  Int(1) [INDEPENDENT]
  firstˍa = 
  Int(1) [INDEPENDENT]
  endsˍwithˍe = 
  Int(1) [INDEPENDENT]
  tempˍvars = 
  Int(10) [INDEPENDENT]
