foolish/foolish-core/src/snapshots/foolish_core__approval_tests__search_pattern_matching_nested_brane.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {b = {a = {x = 1}; b = 2}; r = b?a;}
[0] PARSED:
Brane [EMBRYONIC]
  b = 
  Brane [EMBRYONIC]
    a = 
    Brane [EMBRYONIC]
      x = 
      Int(1) [INDEPENDENT]
    b = 
    Int(2) [INDEPENDENT]
  r = 
  Search(pattern='a', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  b = 
  Brane [CONSTANT]
    a = 
    Brane [CONSTANT]
      x = 
      Int(1) [INDEPENDENT]
    b = 
    Int(2) [INDEPENDENT]
  r = 
  Brane [CONSTANT]
    x = 
    Int(1) [INDEPENDENT]
