foolish/foolish-core/src/snapshots/foolish_core__approval_tests__search_pattern_with_complex_regex.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {b = {tmp_a = 1; result = 2; tmp_b = 3; output = 4}; r1 = b?tmp_.*; r2 = b?result;}
[0] PARSED:
Brane [EMBRYONIC]
  b = 
  Brane [EMBRYONIC]
    tmpˍa = 
    Int(1) [INDEPENDENT]
    result = 
    Int(2) [INDEPENDENT]
    tmpˍb = 
    Int(3) [INDEPENDENT]
    output = 
    Int(4) [INDEPENDENT]
  r1 = 
  Search(pattern='tmpˍ.*', dir=BACKWARD, ANCHORED) [EMBRYONIC]
  r2 = 
  Search(pattern='result', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  b = 
  Brane [CONSTANT]
    tmpˍa = 
    Int(1) [INDEPENDENT]
    result = 
    Int(2) [INDEPENDENT]
    tmpˍb = 
    Int(3) [INDEPENDENT]
    output = 
    Int(4) [INDEPENDENT]
  r1 = 
  Int(1) [INDEPENDENT]
  r2 = 
  Int(2) [INDEPENDENT]
