foolish/foolish-core/src/snapshots/foolish_core__approval_tests__search_through_concatenation.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {b={x=10}; c = b {y=20}; result = c.x + c.y;}
[0] PARSED:
Brane [EMBRYONIC]
  b = 
  Brane [EMBRYONIC]
    x = 
    Int(10) [INDEPENDENT]
  c = 
  Concatenation(elements=2) [EMBRYONIC]
    Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
    Brane [EMBRYONIC]
      y = 
      Int(20) [INDEPENDENT]
  result = 
  Operator(+) [EMBRYONIC]
    Search(pattern='^x$', dir=BACKWARD, ANCHORED) [EMBRYONIC]
    Search(pattern='^y$', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  b = 
  Brane [CONSTANT]
    x = 
    Int(10) [INDEPENDENT]
  c = 
  Brane [CONSTANT]
    x = 
    Int(10) [INDEPENDENT]
    y = 
    Int(20) [INDEPENDENT]
  result = 
  Int(30) [CONSTANT]
