foolish/foolish-core/src/snapshots/foolish_core__approval_tests__search_with_multiple_matches.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 KGn2H5+n8cK6Ql8fEfiq4CxebTCPnxubrkICBBzI2xOAenpO/rMUNUiYJLb8lQbvfdFNHnnqTZL6i5gjnadbBA==
INPUT: {b = {a1 = 1; a2 = 2; a3 = 3}; r = b?a.*;}
[0] PARSED:
Brane [EMBRYONIC]
  b = 
  Brane [EMBRYONIC]
    a1 = 
    Int(1) [INDEPENDENT]
    a2 = 
    Int(2) [INDEPENDENT]
    a3 = 
    Int(3) [INDEPENDENT]
  r = 
  Search(pattern='a.*', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  b = 
  Brane [CONSTANT]
    a1 = 
    Int(1) [INDEPENDENT]
    a2 = 
    Int(2) [INDEPENDENT]
    a3 = 
    Int(3) [INDEPENDENT]
  r = 
  Int(1) [INDEPENDENT]
