foolish/foolish-core/src/snapshots/foolish_core__approval_tests__seek_across_nested_brane_boundary.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 mXHAotwV68gUgv9HbRQh5+Nj1MEHFGI3xt5zFJBG+iCcXnrC6kuDLSa8ZKnAOpbSaIbVClw3LVyMn8GzQEToCw==
INPUT: {a = 1; b = 2; inner = {x = #-1}; c = #-1;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  inner = 
  Brane [EMBRYONIC]
    x = 
    Index(offset=-1, FREE) [EMBRYONIC]
  c = 
  Index(offset=-1, FREE) [EMBRYONIC]
RESULT:
Brane [NK]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  inner = 
  Brane [NK]
    x = 
    ??? (constanic_clone called on NYE FIR) [NK]
  c = 
  ??? (constanic_clone called on NYE FIR) [NK]
